--- a/frontend/src/components/expenses/ExpenseItem.css
+++ b/frontend/src/components/expenses/ExpenseItem.css
@@ -14,8 +14,23 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.expenseActions {
-    margin-bottom: 1rem;
+.expenseActions{
+    width: 90%;
+    height: 60px;
+}
+
+.expenseItem p,
+.expenseItem #description {
+    height: 20px;
+}
+
+#description, #amount {
+    overflow-y: auto;
+}
+
+#amount {
+    font-size: large;
+    font-weight: bold;
 }
 
 .expenseItem.editing input,
@@ -31,7 +46,7 @@
 
 @media (min-width: 1024px){
     .expenseItem {
-        width: 90%;
+        width: 100%;
         height: 60px;
 
         display: grid;
@@ -41,7 +56,7 @@
     .expenseItem.editing input,
     .expenseItem.editing textarea,
     .expenseItem.editing select {
-        width: 90%;
+        width: 100%;
         height: 60px;
         padding: 0;
         margin: 0;
@@ -50,9 +65,11 @@
         border: none;
         outline: none;
         background: transparent;
+
+        text-align: center;
     }
 
     .expenseActions {
-        margin-bottom: 0;
+        height: 20px;
     }
 }
